--- a/pet-owner/src/test/resources/application-test.yml
+++ b/pet-owner/src/test/resources/application-test.yml
@@ -2,3 +2,4 @@ datasources:
   default:
     url: jdbc:tc:postgresql:12:///postgres
     driverClassName: org.testcontainers.jdbc.ContainerDatabaseDriver
+    schema: petowner
