--- a/pet-clinic/build.gradle
+++ b/pet-clinic/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     testImplementation("org.testcontainers:postgresql")
     testImplementation("org.testcontainers:testcontainers")
     implementation("io.micronaut:micronaut-validation")
+    implementation ("org.apache.ibatis:ibatis-core:3.0")
 
 }
 
@@ -39,8 +40,8 @@ application {
     mainClass.set("com.bonobo.Application")
 }
 java {
-    sourceCompatibility = JavaVersion.toVersion("17")
-    targetCompatibility = JavaVersion.toVersion("17")
+    sourceCompatibility = JavaVersion.toVersion("16")
+    targetCompatibility = JavaVersion.toVersion("16")
 }
 
 
