--- a/pet-clinic-reviews/src/main/resources/application.yml
+++ b/pet-clinic-reviews/src/main/resources/application.yml
@@ -1,4 +1,9 @@
 micronaut:
   application:
     name: petClinicReviews
-mongodb.uri: mongodb://${MONGO_HOST:localhost}:${MONGO_PORT:27017}
+#mongodb.uri: mongodb://${MONGO_HOST:localhost}:${MONGO_PORT:27017}
+mongodb:
+#  uri: mongodb://username:password@localhost:27017/pet-clinic-reviews
+  uri: mongodb+srv://priestalesso:auditek1@alessocluster.qorik.mongodb.net/pet-clinic-reviews?retryWrites=true&w=majority
+  databaseName: pet-clinic-reviews
+  collectionName: vet-reviews
