created request error exception using the io.micronaut.problem:micronaut-problem-json package

--- a/pet-owner/build.gradle
+++ b/pet-owner/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     implementation("io.micronaut.sql:micronaut-jdbc-hikari")
     implementation("javax.annotation:javax.annotation-api")
     implementation("javax.inject:javax.inject:1")
+    implementation("io.micronaut.problem:micronaut-problem-json")
     runtimeOnly("ch.qos.logback:logback-classic")
     runtimeOnly("org.postgresql:postgresql")
     testImplementation("org.testcontainers:junit-jupiter")
