mappers for doctor and specilitz dto and entity

--- a/pet-clinic/build.gradle
+++ b/pet-clinic/build.gradle
@@ -32,6 +32,8 @@ dependencies {
     testImplementation("org.testcontainers:testcontainers")
     implementation("io.micronaut:micronaut-validation")
     implementation ("org.mybatis:mybatis:3.5.7")
+    implementation 'org.mapstruct:mapstruct:1.4.2.Final'
+    annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.2.Final'
 
 }
 
