--- a/pet-clinic/build.gradle
+++ b/pet-clinic/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     implementation("io.micronaut:micronaut-runtime")
     implementation("io.micronaut.sql:micronaut-jdbc-hikari")
     implementation("javax.annotation:javax.annotation-api")
+    implementation("javax.inject:javax.inject:1")
     runtimeOnly("ch.qos.logback:logback-classic")
     runtimeOnly("org.postgresql:postgresql")
     testImplementation("org.testcontainers:junit-jupiter")
@@ -34,6 +35,7 @@ dependencies {
     implementation ("org.mybatis:mybatis:3.5.7")
     implementation 'org.mapstruct:mapstruct:1.4.2.Final'
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.2.Final'
+    implementation 'org.zalando:problem:0.27.1'
 
 }
 
