--- a/pet-owner/build.gradle
+++ b/pet-owner/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     implementation("javax.annotation:javax.annotation-api")
     implementation("javax.inject:javax.inject:1")
     implementation("io.micronaut.problem:micronaut-problem-json")
+    implementation group: 'io.micronaut', name: 'micronaut-security', version: '1.0.0'
     runtimeOnly("ch.qos.logback:logback-classic")
     runtimeOnly("org.postgresql:postgresql")
     testImplementation("org.testcontainers:junit-jupiter")
