--- a/pet-clinic-reviews/build.gradle
+++ b/pet-clinic-reviews/build.gradle
@@ -30,6 +30,8 @@ dependencies {
     testImplementation("org.testcontainers:mongodb")
     testImplementation("org.testcontainers:testcontainers")
     implementation("io.micronaut:micronaut-validation")
+    implementation group: 'io.micronaut.kafka', name: 'micronaut-kafka', version: '4.3.0'
+
 
 }
 
