--- a/pet-clinic-reviews/src/main/resources/application.yml
+++ b/pet-clinic-reviews/src/main/resources/application.yml
@@ -1,6 +1,11 @@
 micronaut:
   application:
     name: petClinicReviews
+  server:
+    port: 8083
+kafka:
+  bootstrap:
+    servers: localhost:9094
 #mongodb.uri: mongodb://${MONGO_HOST:localhost}:${MONGO_PORT:27017}
 mongodb:
 #  uri: mongodb://username:password@localhost:27017/pet-clinic-reviews
