--- a/pet-clinic-reviews/build.gradle
+++ b/pet-clinic-reviews/build.gradle
@@ -25,14 +25,16 @@ dependencies {
     implementation("io.micronaut:micronaut-runtime")
     implementation("io.micronaut.mongodb:micronaut-mongo-sync")
     implementation("javax.annotation:javax.annotation-api")
+    implementation("javax.inject:javax.inject:1")
     runtimeOnly("ch.qos.logback:logback-classic")
     testImplementation("org.testcontainers:junit-jupiter")
     testImplementation("org.testcontainers:mongodb")
     testImplementation("org.testcontainers:testcontainers")
     implementation("io.micronaut:micronaut-validation")
     implementation group: 'io.micronaut.kafka', name: 'micronaut-kafka', version: '4.3.0'
-
-
+    implementation 'org.mapstruct:mapstruct:1.4.2.Final'
+    annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.2.Final'
+    implementation 'org.zalando:problem:0.27.1'
 }
 
 
