--- a/pet-clinic-reviews/src/main/resources/application.yml
+++ b/pet-clinic-reviews/src/main/resources/application.yml
@@ -8,7 +8,7 @@ kafka:
     servers: localhost:9094
 #mongodb.uri: mongodb://${MONGO_HOST:localhost}:${MONGO_PORT:27017}
 mongodb:
-#  uri: mongodb://username:password@localhost:27017/pet-clinic-reviews
-  uri: mongodb+srv://priestalesso:auditek1@alessocluster.qorik.mongodb.net/pet-clinic-reviews?retryWrites=true&w=majority
+  #username and password is the one granted in the securty option
+  uri: mongodb+srv://alesso:auditek1@alessocluster.g1xq4.mongodb.net/?retryWrites=true&w=majority
   databaseName: pet-clinic-reviews
   collectionName: vet-reviews
