--- a/pet-clinic/src/main/resources/application.yml
+++ b/pet-clinic/src/main/resources/application.yml
@@ -7,3 +7,7 @@ datasources:
     driverClassName: org.postgresql.Driver
     username: postgres
     password: postgres
+
+kafka:
+  bootstrap:
+    servers: localhost:9094
